--- a/webview/style.css
+++ b/webview/style.css
@@ -1,3 +1,26 @@
+@font-face {
+  font-family: 'WVE Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url(./MaterialSymbolsRounded.woff2) format('woff2');
+}
+
+.wve-icon {
+  font-family: 'WVE Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  font-feature-settings: 'liga';
+  -webkit-font-smoothing: antialiased;
+}
+
 * {
   user-select: none;
   outline: none;
@@ -8,7 +31,68 @@ html {
   overflow: auto;
 }
 
-#selector {
+html {
+  --wve-toolbar-width: 40px;
+  margin-left: var(--wve-toolbar-width);
+}
+
+#wve-toolbar {
+  all: unset;
+  box-sizing: border-box;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: var(--wve-toolbar-width);
+  height: 100dvh;
+  font-size: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: var(--vscode-foreground);
+  background-color: var(--vscode-editor-background);
+  box-shadow: 0 0 1px 1px currentColor;
+
+  & * {
+    all: unset;
+    box-sizing: border-box;
+  }
+
+  &>fieldset {
+    appearance: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    direction: ltr;
+    font-feature-settings: 'liga';
+    line-height: 1;
+    font-family: 'WVE Icons';
+    font-size: 24px;
+    -webkit-font-smoothing: antialiased;
+
+    &>.button {
+      appearance: none;
+      display: grid;
+      place-content: center;
+      width: var(--wve-toolbar-width);
+      height: var(--wve-toolbar-width);
+      opacity: 0.5;
+      white-space: nowrap;
+      word-wrap: normal;
+
+      &:hover {
+        opacity: 1;
+        box-shadow: inset 0 0 0 var(--wve-toolbar-width) rgb(128 128 128 / 0.2);
+      }
+
+      &:active {
+        color: var(--vscode-editorLink-activeForeground);
+      }
+    }
+  }
+}
+
+#wve-selector {
+  all: unset;
   position: absolute;
   box-sizing: border-box;
   margin: 0;
@@ -16,6 +100,7 @@ html {
   width: 0;
   height: 0;
   background-color: oklch(1 0 0 / 0.15);
+  /* Do not use border so that JavaScript can recognize mouse drag. */
   box-shadow: 0 0 0 1px oklch(0.7 0.2 230);
 }
 
@@ -23,17 +108,20 @@ html {
   box-shadow: 0 0 0 1px currentColor;
 }
 
-[wve-selected],
-[wve-selected] * {
-  cursor: grab;
-}
+[wve-selected] {
 
-[wve-selected],
-[wve-selected]:hover {
-  box-shadow: 0 0 0 2px oklch(0.7 0.3 230 / 0.8);
-}
+  &,
+  & * {
+    cursor: grab;
+  }
 
-[wve-selected]:active,
-[wve-selected] *:active {
-  cursor: grabbing;
+  &,
+  &:hover {
+    box-shadow: 0 0 0 2px oklch(0.7 0.3 230 / 0.8);
+  }
+
+  &:active,
+  & *:active {
+    cursor: grabbing;
+  }
 }
