--- a/webview/style.css
+++ b/webview/style.css
@@ -21,7 +21,9 @@
   -webkit-font-smoothing: antialiased;
 }
 
-* {
+*,
+*::before,
+*::after {
   user-select: none;
   outline: none;
   cursor: default;
@@ -29,9 +31,6 @@
 
 html {
   overflow: auto;
-}
-
-html {
   --wve-toolbar-width: 40px;
   margin-left: var(--wve-toolbar-width);
 }
@@ -52,13 +51,15 @@ html {
   background-color: var(--vscode-editor-background);
   box-shadow: 0 0 1px 1px currentColor;
 
-  & * {
+  *,
+  *::before,
+  *::after {
     all: unset;
     box-sizing: border-box;
+    appearance: none;
   }
 
-  &>fieldset {
-    appearance: none;
+  >fieldset {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -71,15 +72,13 @@ html {
 
     &:disabled {
       cursor: not-allowed;
+
+      .wve-button {
+        color: var(--vscode-disabledForeground);
+      }
     }
 
-    &:disabled>.button {
-      color: var(--vscode-disabledForeground);
-      pointer-events: none;
-    }
-
-    &>.button {
-      appearance: none;
+    >.wve-button {
       display: grid;
       place-content: center;
       width: var(--wve-toolbar-width);
@@ -88,12 +87,12 @@ html {
       white-space: nowrap;
       word-wrap: normal;
 
-      &:hover {
+      &:hover:not(:disabled *) {
         opacity: 1;
         box-shadow: inset 0 0 0 var(--wve-toolbar-width) rgb(128 128 128 / 0.2);
       }
 
-      &:active {
+      &:active:not(:disabled *) {
         color: var(--vscode-editorLink-activeForeground);
       }
     }
@@ -102,14 +101,14 @@ html {
 
 #wve-selector {
   all: unset;
-  position: absolute;
   box-sizing: border-box;
+  position: absolute;
   margin: 0;
   padding: 0;
   width: 0;
   height: 0;
   background-color: oklch(1 0 0 / 0.15);
-  /* Do not use border so that JavaScript can recognize mouse drag. */
+  /* Do not use border so that JavaScript can recognize mouse drag area. */
   box-shadow: 0 0 0 1px oklch(0.7 0.2 230);
 }
 
@@ -120,7 +119,7 @@ html {
 [wve-selected] {
 
   &,
-  & * {
+  * {
     cursor: grab;
   }
 
@@ -130,7 +129,7 @@ html {
   }
 
   &:active,
-  & *:active {
+  *:active {
     cursor: grabbing;
   }
 }
