--- a/webview/style.css
+++ b/webview/style.css
@@ -1,26 +1,10 @@
-@font-face {
-  font-family: 'WVE Icons';
-  font-style: normal;
-  font-weight: 400;
-  src: url(./MaterialSymbolsRounded.woff2) format('woff2');
+@layer user-style, reset;
+
+:root {
+  --wve-toolbar-width: 40px;
 }
 
-.wve-icon {
-  font-family: 'WVE Icons';
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: none;
-  display: inline-block;
-  white-space: nowrap;
-  word-wrap: normal;
-  direction: ltr;
-  font-feature-settings: 'liga';
-  -webkit-font-smoothing: antialiased;
-}
-
+/* Styles that overrides user-style */
 *,
 *::before,
 *::after {
@@ -31,71 +15,114 @@
 
 html {
   overflow: auto;
-  --wve-toolbar-width: 40px;
-  margin-left: var(--wve-toolbar-width);
+  margin: 0 0 0 var(--wve-toolbar-width);
+}
+
+.wve-selectable:hover {
+  box-shadow: 0 0 0 1px currentColor;
+}
+
+[wve-selected] {
+  cursor: grab;
+
+  &,
+  &:hover {
+    box-shadow: 0 0 0 2px var(--vscode-editorWarning-foreground);
+  }
+
+  &:active {
+    cursor: grabbing;
+  }
+
+  * {
+    pointer-events: none;
+  }
+}
+
+/* Styles for this extension's elements */
+@font-face {
+  font-family: 'WVE Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url(./MaterialSymbolsRounded.woff2) format('woff2');
+}
+
+@layer reset {
+  [id^=wve-] {
+
+    &,
+    *,
+    *::before,
+    *::after {
+      all: unset;
+      box-sizing: border-box;
+      font-family: var(--vscode-font-family);
+      font-size: 10px;
+    }
+  }
 }
 
 #wve-toolbar {
-  all: unset;
-  box-sizing: border-box;
   position: fixed;
   left: 0;
   top: 0;
+  padding: 0;
   width: var(--wve-toolbar-width);
   height: 100dvh;
-  font-size: 16px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   color: var(--vscode-foreground);
   background-color: var(--vscode-editor-background);
   box-shadow: 0 0 1px 1px currentColor;
+  /* for icons (inherited to descendant) */
+  direction: ltr;
+  font-feature-settings: 'liga';
+  line-height: 1;
+  font-size: 24px;
+  white-space: nowrap;
+  word-wrap: normal;
+  -webkit-font-smoothing: antialiased;
 
-  *,
-  *::before,
-  *::after {
-    all: unset;
-    box-sizing: border-box;
-    appearance: none;
-  }
-
-  >fieldset {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    direction: ltr;
-    font-feature-settings: 'liga';
-    line-height: 1;
-    font-family: 'WVE Icons';
+  .wve-button {
+    display: grid;
+    place-content: center;
+    width: var(--wve-toolbar-width);
+    height: var(--wve-toolbar-width);
+    opacity: 0.5;
     font-size: 24px;
-    -webkit-font-smoothing: antialiased;
+    font-family: 'WVE Icons';
 
-    &:disabled {
+    &:disabled,
+    :disabled & {
       cursor: not-allowed;
-
-      .wve-button {
-        color: var(--vscode-disabledForeground);
-      }
+      color: var(--vscode-disabledForeground);
     }
 
-    >.wve-button {
-      display: grid;
-      place-content: center;
-      width: var(--wve-toolbar-width);
-      height: var(--wve-toolbar-width);
-      opacity: 0.5;
-      white-space: nowrap;
-      word-wrap: normal;
-
-      &:hover:not(:disabled *) {
+    &:not(:disabled, :disabled *) {
+      &:hover {
         opacity: 1;
         box-shadow: inset 0 0 0 var(--wve-toolbar-width) rgb(128 128 128 / 0.2);
       }
 
-      &:active:not(:disabled *) {
+      &:active {
         color: var(--vscode-editorLink-activeForeground);
       }
     }
+  }
+
+  &,
+  >fieldset {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  >fieldset {
+    &:not(:first-child) {
+      border-top: 1px solid rgb(128 128 128 / 0.2);
+    }
+  }
+
+  #zoom-value {
+    color: var(--vscode-descriptionForeground);
   }
 }
 
@@ -107,29 +134,7 @@ html {
   padding: 0;
   width: 0;
   height: 0;
-  background-color: oklch(1 0 0 / 0.15);
-  /* Do not use border so that JavaScript can recognize mouse drag area. */
-  box-shadow: 0 0 0 1px oklch(0.7 0.2 230);
-}
-
-.wve-selectable:hover {
-  box-shadow: 0 0 0 1px currentColor;
-}
-
-[wve-selected] {
-
-  &,
-  * {
-    cursor: grab;
-  }
-
-  &,
-  &:hover {
-    box-shadow: 0 0 0 2px oklch(0.7 0.3 230 / 0.8);
-  }
-
-  &:active,
-  *:active {
-    cursor: grabbing;
-  }
+  background-color: rgb(128 128 128 / 0.15);
+  /* NOTE Do not use border so that JavaScript can recognize mouse drag area. */
+  box-shadow: 0 0 0 1px var(--vscode-editorWarning-foreground);
 }
