--- a/webview/style.css
+++ b/webview/style.css
@@ -96,7 +96,7 @@ body {
     place-content: center;
     width: var(--wve-toolbar-width);
     height: var(--wve-toolbar-width);
-    opacity: 0.5;
+    opacity: 0.8;
     font-size: 24px;
     font-family: 'WVE Icons';
     color: var(--vscode-foreground);
@@ -110,12 +110,28 @@ body {
     &:not(:disabled, :disabled *) {
       &:hover {
         opacity: 1;
-        box-shadow: inset 0 0 0 var(--wve-toolbar-width) rgb(128 128 128 / 0.2);
+        box-shadow: inset 0 0 0 var(--wve-toolbar-width) var(--vscode-button-secondaryHoverBackground);
       }
 
       &:active {
-        color: var(--vscode-editorLink-activeForeground);
+        color: var(--vscode-button-hoverBackground);
+        background-color: var(--vscode-editor-selectionHighlightBackground);
       }
+    }
+
+    [type=checkbox] {
+      position: relative;
+      all: 0;
+      padding: 0;
+      margin: 0;
+      appearance: none;
+      color: transparent;
+      background-color: transparent;
+    }
+
+    &:has(:checked) {
+      color: var(--vscode-button-hoverBackground);
+      background-color: var(--vscode-editor-selectionHighlightBackground);
     }
   }
 
