--- a/webview/style.css
+++ b/webview/style.css
@@ -62,6 +62,14 @@ body :hover:not(:has(:hover), [wve-selected]) {
   }
 }
 
+.wve-adding-selection {
+
+  &,
+  & :not([id^=wve-], [id^=wve-] *) {
+    cursor: copy !important;
+  }
+}
+
 /* Styles for this extension's elements */
 @font-face {
   font-family: 'WVE Icons';
@@ -108,24 +116,28 @@ body :hover:not(:has(:hover), [wve-selected]) {
   -webkit-font-smoothing: antialiased;
 
   .wve-button {
-    display: grid;
-    place-content: center;
-    width: var(--wve-toolbar-width);
-    height: var(--wve-toolbar-width);
-    opacity: 0.8;
-    font-size: 24px;
-    font-family: 'WVE Icons';
-    color: var(--vscode-foreground);
+
+    &,
+    &::before,
+    &::after {
+      display: grid;
+      place-content: center;
+      width: var(--wve-toolbar-width);
+      height: var(--wve-toolbar-width);
+      font-size: 24px;
+      font-family: 'WVE Icons';
+      color: var(--vscode-foreground);
+    }
 
     &:disabled,
     :disabled & {
       cursor: not-allowed;
       color: var(--vscode-disabledForeground);
+      opacity: 0.8;
     }
 
     &:not(:disabled, :disabled *) {
       &:hover {
-        opacity: 1;
         box-shadow: inset 0 0 0 var(--wve-toolbar-width) var(--vscode-button-secondaryHoverBackground);
       }
 
@@ -136,16 +148,17 @@ body :hover:not(:has(:hover), [wve-selected]) {
     }
 
     [type=checkbox] {
-      position: relative;
-      all: 0;
-      padding: 0;
-      margin: 0;
       appearance: none;
       color: transparent;
       background-color: transparent;
     }
 
-    &:has(:checked) {
+    &:has([type=checkbox])::before {
+      content: "link_off";
+    }
+
+    &:has([type=checkbox]:checked)::before {
+      content: "link";
       color: var(--vscode-textLink-foreground);
       background-color: oklch(50% 0 0 / 0.2);
     }
